--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,6 +38,7 @@ collections:
               default: 'index-page',
             }
           - { label: Title, name: title, widget: string }
+          - { label: Subtitle2, name: subtitle, widget: string }
           - { label: Image, name: image, widget: image }
           - { label: Heading, name: heading, widget: string }
           - { label: Subheading, name: subheading, widget: string }
